demo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: demo-pod
    labels:
        app: demo
spec:
    replicas: 3
    selector:
        matchLabels:
            app: demo
    template:
        metadata:
            labels:
                app: demo
        spec:
            containers:
                - name: whoami
                  image: containous/whoami
                  ports:
                      - containerPort: 80
