demo/service.yml
apiVersion: v1
kind: Service
metadata:
    name: demo
spec:
    type: LoadBalancer
    selector:
        app: demo
    ports:
        - port: 80
          targetPort: 80
