demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: demo-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    defaultBackend:
        service:
            name: demo
            port:
                number: 80
